--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/MainWindow.xaml
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/MainWindow.xaml
@@ -4,13 +4,13 @@
                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                    xmlns:local="clr-namespace:PumpDiagnosticsSystem.App"
+                   xmlns:vm="clr-namespace:PumpDiagnosticsSystem.App.ViewModel"
                    xmlns:metro="http://metro.mahapps.com/winfx/xaml/controls"
                    GlowBrush="{DynamicResource AccentColorBrush}"
                    BorderThickness="1"
-                   mc:Ignorable="d"
                    Title="{x:Static local:PubMembers.AppName}"
-                   Height="350"
-                   Width="525"
+                   Height="480"
+                   Width="800"
                    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
                    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
                    xmlns:command="http://www.galasoft.ch/mvvmlight"
@@ -23,13 +23,12 @@
                    FontFamily="{DynamicResource MaterialDesignFont}"
                    DataContext="{Binding MainViewModel, Source={StaticResource Locator}}"
                    Icon="runlogoicon.png"
+                   
                    WindowStartupLocation="CenterScreen">
     <metro:MetroWindow.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </metro:MetroWindow.Resources>
-    
     <Grid>
-        
         <DockPanel>
             <Menu IsMainMenu="True" DockPanel.Dock="Top">
 <!--                <MenuItem Header="系统(_F)">-->
@@ -76,9 +75,104 @@
                          DockPanel.Dock="Bottom"
                          Visibility="{Binding IsSysRunning, Converter={StaticResource BooleanToVisibilityConverter}}" />
             <materialDesign:Card Padding="32"
-                                 Margin="16">
-                <TextBlock Style="{DynamicResource MaterialDesignTitleTextBlock}">机泵故障诊断子系统</TextBlock>
+                                 Margin="16"
+                                 DockPanel.Dock="Top">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Style="{DynamicResource MaterialDesignTitleTextBlock}"
+                               Text="{Binding MainText}"
+                               HorizontalAlignment="Center"
+                               FontFamily="Microsoft YaHei"></TextBlock>
+                </Grid>
+                
             </materialDesign:Card>
+            <ItemsControl ItemsSource="{Binding PPSystems}"
+                          BorderThickness="0"
+                          Background="Transparent"
+                          HorizontalAlignment="Center"
+                          Name="PPItems">
+                <!--                <i:Interaction.Triggers>-->
+                <!--                    <i:EventTrigger EventName="MouseLeftButtonUp">-->
+                <!--                        <i:InvokeCommandAction   Command="{Binding DataContext.DrawingSelectedCommand, RelativeSource={RelativeSource AncestorType={x:Type Page}, Mode=FindAncestor}}"-->
+                <!--                                                 CommandParameter="{Binding SelectedItem, ElementName=PART_ChildrenItemsLB}" />-->
+                <!--                    </i:EventTrigger>-->
+                <!--                </i:Interaction.Triggers>-->
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel Orientation="Horizontal" IsItemsHost="True" />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate DataType="vm:PPSysView">
+                        <materialDesign:Card Margin="2 0"
+                                             Width="142">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                </Grid.RowDefinitions>
+                                
+                                <Rectangle Height="180" Fill="#eee"></Rectangle>
+                                <Image Grid.Row="0" Width="{Binding ElementName=Label,Path=ActualWidth}"
+                                       Source="pp.png"
+                                       Height="180"
+                                       RenderOptions.BitmapScalingMode="HighQuality" />
+                                <Grid Grid.Row="1">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition></RowDefinition>
+                                        <RowDefinition></RowDefinition>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition ></ColumnDefinition>
+                                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                    </Grid.ColumnDefinitions>
+                                    <Ellipse x:Name="Ellipse"
+                                             Width="16"
+                                             Height="16"
+                                             Margin="0 5 5 5"
+                                             Fill="{DynamicResource DisabledMenuItemForeground}"
+                                             Grid.Row="0"
+                                             Grid.Column="1"
+                                             Grid.RowSpan="2"></Ellipse>
+                                    <TextBlock Grid.Row="0" Grid.Column="0"
+                                               Foreground="{DynamicResource AccentColorBrush}"
+                                               Text="{Binding Name}"
+                                               VerticalAlignment="Center"
+                                               Padding="5 0"
+                                               Margin="0 10 0 6"
+                                               FontSize="18" />
+                                    <TextBlock Grid.Row="1"
+                                               Grid.Column="0"
+                                               Foreground="{DynamicResource GrayBrush2}"
+                                               Text="{Binding Time}"
+                                               VerticalAlignment="Center"
+                                               Padding="7 0"
+                                               Margin="0 10 0 6"
+                                               FontSize="14" />
+                                </Grid>
+                                
+                                <!--<Border Grid.Column="0"
+                                    Grid.Row="1"
+                                    Grid.ColumnSpan="2">
+                                <Image Width="{Binding ElementName=Label,Path=ActualWidth}"
+                                       Source="../../../Images/line.png" />
+                            </Border>-->
+                            </Grid>
+                        </materialDesign:Card>
+                        <DataTemplate.Triggers>
+                            <DataTrigger  Binding="{Binding IsRunning}"
+                                          Value="True">
+                                <Setter TargetName="Ellipse"
+                                        Property="Fill"
+                                        Value="LimeGreen"></Setter>
+                            </DataTrigger>
+                        </DataTemplate.Triggers>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
         </DockPanel>
         <i:Interaction.Triggers>
             <i:EventTrigger EventName="Loaded">
