--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/MainWindow.xaml
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/MainWindow.xaml
@@ -139,8 +139,8 @@
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
                     <DataTemplate DataType="vm:PPSysView">
-                        <materialDesign:Card Margin="2 0"
-                                             Width="142">
+                        <materialDesign:Card Margin="4 0"
+                                             Width="146">
                             <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition></RowDefinition>
@@ -156,33 +156,72 @@
                                     <Grid.RowDefinitions>
                                         <RowDefinition></RowDefinition>
                                         <RowDefinition></RowDefinition>
+                                        <RowDefinition></RowDefinition>
                                     </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition ></ColumnDefinition>
-                                        <ColumnDefinition Width="Auto"></ColumnDefinition>
-                                    </Grid.ColumnDefinitions>
-                                    <Ellipse x:Name="Ellipse"
-                                             Width="16"
-                                             Height="16"
-                                             Margin="0 5 5 5"
-                                             Fill="{DynamicResource DisabledMenuItemForeground}"
-                                             Grid.Row="0"
-                                             Grid.Column="1"
-                                             Grid.RowSpan="2"></Ellipse>
+                                    <Grid Grid.Row="0"
+                                          Grid.RowSpan="3"
+                                          RenderTransformOrigin="0.5,0.5"
+                                          HorizontalAlignment="Right"
+                                          Width="32"
+                                          Height="32"
+                                          Margin="0 0 6 0"
+                                          x:Name="FanStop"
+                                          Background="Gray"
+                                          RenderOptions.BitmapScalingMode="HighQuality">
+                                        <Grid.OpacityMask>
+                                            <ImageBrush ImageSource="fan.png"></ImageBrush>
+                                        </Grid.OpacityMask>
+                                    </Grid>
+                                    <Grid Grid.Row="0"
+                                          Grid.RowSpan="3"
+                                          RenderTransformOrigin="0.5,0.5"
+                                          HorizontalAlignment="Right"
+                                          Width="32"
+                                          Height="32"
+                                          Margin="0 0 6 0"
+                                          x:Name="FanRotate"
+                                          Background="LimeGreen"
+                                          RenderOptions.BitmapScalingMode="HighQuality">
+                                        <Grid.OpacityMask>
+                                            <ImageBrush ImageSource="fan.png"></ImageBrush>
+                                        </Grid.OpacityMask>
+                                        <Grid.RenderTransform>
+                                            <RotateTransform Angle="0"></RotateTransform>
+                                        </Grid.RenderTransform>
+                                        <Grid.Triggers>
+                                            <EventTrigger RoutedEvent="Window.Loaded">
+                                                <BeginStoryboard Name="RotateStoryBoard">
+                                                    <Storyboard RepeatBehavior="Forever">
+                                                        <DoubleAnimation Storyboard.TargetProperty="RenderTransform.Angle"
+                                                                         From="0"
+                                                                         To="360"
+                                                                         Duration="0:0:1" />
+                                                    </Storyboard>
+                                                </BeginStoryboard>
+                                            </EventTrigger>
+                                        </Grid.Triggers>
+                                    </Grid>
                                     <TextBlock Grid.Row="0" Grid.Column="0"
                                                Foreground="{DynamicResource AccentColorBrush}"
                                                Text="{Binding Name}"
                                                VerticalAlignment="Center"
                                                Padding="5 0"
-                                               Margin="0 10 0 6"
+                                               Margin="0 8 0 0"
                                                FontSize="18" />
                                     <TextBlock Grid.Row="1"
+                                               Grid.Column="0"
+                                               FontSize="14"
+                                               Text="{Binding RPM, StringFormat={}{0} r/min}"
+                                               Padding="7 0"
+                                               Margin="0 8 0 0"
+                                               Foreground="#666"></TextBlock>
+                                    <TextBlock Grid.Row="2"
                                                Grid.Column="0"
                                                Foreground="{DynamicResource GrayBrush2}"
                                                Text="{Binding Time}"
                                                VerticalAlignment="Center"
                                                Padding="7 0"
-                                               Margin="0 10 0 6"
+                                               Margin="0 6 0 6"
                                                FontSize="14" />
                                 </Grid>
                                 
@@ -197,9 +236,21 @@
                         <DataTemplate.Triggers>
                             <DataTrigger  Binding="{Binding IsRunning}"
                                           Value="True">
-                                <Setter TargetName="Ellipse"
-                                        Property="Fill"
-                                        Value="LimeGreen"></Setter>
+                                <Setter TargetName="FanStop"
+                                        Property="Visibility"
+                                        Value="Hidden"></Setter>
+                                <Setter TargetName="FanRotate"
+                                        Property="Visibility"
+                                        Value="Visible"></Setter>
+                            </DataTrigger>
+                            <DataTrigger  Binding="{Binding IsRunning}"
+                                          Value="False">
+                                <Setter TargetName="FanStop"
+                                        Property="Visibility"
+                                        Value="Visible"></Setter>
+                                <Setter TargetName="FanRotate"
+                                        Property="Visibility"
+                                        Value="Hidden"></Setter>
                             </DataTrigger>
                         </DataTemplate.Triggers>
                     </DataTemplate>
